--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -9,9 +9,10 @@
     <meta name="author" content="">
     <title>Blog Home - Start Bootstrap Template</title>
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+{#    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">#}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="{% static 'assets/css/blog-home.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'dist/styles.css' %}">
 </head>
 <body class="main">
@@ -19,16 +20,9 @@
 <!-- Navigation -->
 {% top_menu request %}
 
-<!-- Main Header Content -->
-<div class="main-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-
-            </div>
-        </div>
-    </div>
-</div>
+<!-- Header Content -->
+{% block header %}
+{% endblock %}
 
 <!-- Page Content -->
 <div class="container">
@@ -179,8 +173,9 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-<script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
-<script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 <script src="{% static 'dist/bundle.js' %}"></script>
 </body>
 </html>
