--- a/project/static/src/scss/_colors.sass
+++ b/project/static/src/scss/_colors.sass
@@ -7,5 +7,8 @@ $blueMariner:           #2C6CDA
 $pinkHeliotrope:        #BC48FF
 $shadow:                rgba(0, 0, 0, 0.15)
 
+$primary:               $blueDodger
+$secondary:             $pinkHeliotrope
 
-$colorsmap: (white: $white, black: $black, gray: $gray, grayOslo: $grayOslo, blueDodger: $blueDodger, blueMariner: $blueMariner, pinkHeliotrope: $pinkHeliotrope, shadow: $shadow)
+
+$colorsmap: (primary: $primary, secondary: $secondary, white: $white, black: $black, gray: $gray, grayOslo: $grayOslo, blueDodger: $blueDodger, blueMariner: $blueMariner, pinkHeliotrope: $pinkHeliotrope, shadow: $shadow)
