--- a/project/static/src/scss/header.sass
+++ b/project/static/src/scss/header.sass
@@ -23,7 +23,9 @@ body
     .main-header
       padding: 45px 0
       background-color: $gray
-      //background-image: url("../img/main-header.jpg")
+      background-image: url("../img/photo.jpg")
+      background-repeat: no-repeat
+      background-position: center
       .header-wrapper
         justify-content: space-between
         flex-direction: row
