--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -5,15 +5,14 @@
 <div class="main-header">
     <div class="container">
         <div class="row header-wrapper">
-{#            <div class="col-md-6"></div>#}
             <div class="col-md-4">
                 <div class="row">
                     <div class="col-md-10">
-                        <img class="logo" src="{% static 'src/img/logo.png' %}" alt="">
+                        <img class="logo" src="{% static 'src/img/logo@2x.png' %}" alt="">
                         <div class="text-container">
                             <p class="text">Педиатрия, инфекционные болезни, гепатология</p>
                         </div>
-                        <img class="docs" src="{% static 'src/img/docs.png' %}" alt="">
+                        <img class="docs" src="{% static 'src/img/doc-icon@2x.png' %}" alt="">
                         <div class="prof-wrapper">
                             <div class="item">
                                 <p class="years">2004 – 2005 г.</p>
@@ -46,7 +45,7 @@
                     <table>
                         <tr>
                             <td class="left">
-                                <img src="{% static 'src/img/phone.png' %}" alt="">
+                                <img src="{% static 'src/img/phone-icon@2x.png' %}" alt="">
                             </td>
                             <td>
                                 <div class="data">
@@ -57,7 +56,7 @@
                         </tr>
                         <tr>
                             <td class="left">
-                                <img src="{% static 'src/img/tomsk.png' %}" alt="">
+                                <img src="{% static 'src/img/location-icon@2x.png' %}" alt="">
                             </td>
                             <td>
                                 <div class="data">
