--- a/project/static/src/scss/global.sass
+++ b/project/static/src/scss/global.sass
@@ -3,6 +3,10 @@
 body
   padding-top: 68px
   a
+    font-family: 'Open Sans' sans-serif
+    font-size: 14px
     color: $black
+    text-decoration: underline
+    text-transform: capitalize
 
 
