--- a/project/static/src/scss/home.sass
+++ b/project/static/src/scss/home.sass
@@ -31,3 +31,21 @@
           margin-left: 0
         &:last-child
           margin-right: 0
+
+.info-block-wrapper
+  background-color: $gray
+  padding: 75px 0 50px 0
+  .title
+    font-family: 'Open Sans', sans-serif
+    font-weight: 800
+    font-size: 24px
+    letter-spacing: 1.5px
+    margin-bottom: 40px
+    &::before
+      content: ""
+      position: absolute
+      top: -15px
+      left: 15px
+      height: 3px
+      width: 25px
+      background-color: $blueDodger
