--- a/project/templates/core/home.html
+++ b/project/templates/core/home.html
@@ -88,7 +88,30 @@
                             allow="encrypted-media"
                             allowfullscreen></iframe>
                     </div>
-                {% endfor %}
+               {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+<div class="info-block-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+                <img src="{{ first_page.get_image }}" width="100%" alt="">
+            </div>
+            <div class="col-md-5">
+                <div class="info-content">
+                    <h3 class="title">{{ first_page.title }}</h3>
+                    <p>{{ first_page.short_description|safe }}</p>
+                    <a class="link" href="{{ first_page.get_url }}">подробнее</a>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="info-content">
+                    <h3 class="title">{{ second_page.title }}</h3>
+                    <p>{{ second_page.short_description|safe }}</p>
+                    <a class="link" href="{{ second_page.get_url }}">подробнее</a>
+                </div>
             </div>
         </div>
     </div>
