--- a/project/static/src/scss/global.sass
+++ b/project/static/src/scss/global.sass
@@ -1,12 +1,22 @@
 @import "./_colors.sass"
 
 body
-  padding-top: 68px
+  padding-top: 65px
   a
     font-family: 'Open Sans' sans-serif
     font-size: 14px
     color: $black
     text-decoration: underline
     text-transform: capitalize
+  #error-block
+    // height: 30px
+    width: 100%
+    position: fixed
+    bottom: 0
+    background-color: rgb(255, 102, 102)
+    color: white
+    z-index: 999
+    padding: 5px
+    font-size: 10px
 
 
