--- a/project/static/src/scss/header.sass
+++ b/project/static/src/scss/header.sass
@@ -50,21 +50,13 @@ body
         // left column
         // left column header skills
         .text-container
-          position: relative
           margin-top: 20px
-          p.text
+          p.title-small
             padding-top: 10px
             font-family: 'Open Sans', sans-serif
             font-size: 16px
             font-weight: 100
             text-transform: uppercase
-            &::before
-              content: ""
-              position: absolute
-              top: 0
-              width: 15px
-              height: 2px
-              background-color: $primary
 
         // left column prof text
         .prof-wrapper
