--- a/project/static/src/scss/global.sass
+++ b/project/static/src/scss/global.sass
@@ -18,5 +18,59 @@ body
     z-index: 999
     padding: 5px
     font-size: 10px
+  .title
+    position: relative
+    font-family: 'Open Sans', sans-serif
+    &::before
+      content: ""
+      position: absolute
+      top: -15px
+      left: 0
+      height: 3px
+      width: 25px
+      background-color: $blueDodger
+  .title-small
+    position: relative
+    font-family: 'Open Sans', sans-serif
+    &::before
+      content: ""
+      position: absolute
+      top: 0
+      width: 15px
+      height: 2px
+      background-color: $primary
+  
+  form
+    input
+      height: 51px
+      padding: 0 17px
+      border: none
+      &::placeholder
+        color: $grayOslo
+        font-family: 'Open Sans', sans-serif
+    textarea
+      &::placeholder
+        color: $grayOslo
+        font-family: 'Open Sans', sans-serif
+
+  .block-border-before
+    position: relative
+    display: flex
+    justify-content: center
+    &::before
+      content: ''
+      position: absolute
+      top: -3px
+      width: 300px
+      height: 6px
+      background-color: $blueDodger
+  .block-border-after
+    &::after
+      content: ''
+      position: absolute
+      bottom: -3px
+      width: 300px
+      height: 6px
+      background-color: $blueDodger
 
 
