--- a/project/static/src/scss/footer.sass
+++ b/project/static/src/scss/footer.sass
@@ -3,4 +3,26 @@
 body
   &.main
     footer
+      padding: 67px 0 71px 0
       background: linear-gradient(to right, $blueDodger, $pinkHeliotrope)
+      .contacts-wrapper
+        font-family: 'Open Sans', sans-serif
+        font-size: 14px
+        table
+          .left
+            display: flex
+            justify-content: flex-end
+            padding-top: 5px
+          .data
+            margin: 0 0 12px 10px
+            color: $white
+        img
+          height: 16px
+        .bold
+          font-weight: 700
+      .social
+        display: flex
+        flex-direction: row
+        justify-content: space-around
+      button
+        width: 100%
