fix title & add deps.pip

--- a/project/templates/core/home.html
+++ b/project/templates/core/home.html
@@ -202,7 +202,7 @@
         <div class="row">
             <div class="reviews">
                 <div class="col-md-9">
-                    <h3 class="title">Отзывы пыциентов</h3>
+                    <h3 class="title">Отзывы пациентов</h3>
                     {% for review in reviews %}
                         <div class="review">
                             <div>
